Init database. Reconfigure how get, save, delete mod methods work.